--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build":"tsc -w",
     "start": "nodemon dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
