--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"tsc -w",
-    "start": "nodemon dist",
+    "build": "rimraf dist && tsc",
+    "start": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,6 +25,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/socket.io": "^3.0.2"
+    "@types/socket.io": "^3.0.2",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1"
   }
 }
