--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/socket.io": "^3.0.2",
     "pre-commit": "^1.2.2",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2"
   }
 }
